# quantlib-irc-lab

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: windows-ci.yml
cmake/: run_msvc_coverage.ps1
data/market/: sofr_fixings_2025-12-17_2026-01-14.csv  sofr_quotes_2026-01-15.csv
docs/: cpp_notes.md  numerical_debug_checklist.md  roadmap.md  sources.md
docs/impl_notes/: 01_mini_pricer.md  02_curve_bootstrap.md
docs/math_notes/: 01_sofr_swap.md  02_curve_bootstrapping.md
examples/: 01_quantlib_hello_swap.cpp  02_quantlib_sofr_curve_bootstrap.cpp  02_sofr_curve_bootstrap.cpp
src/core/: bracketed_bisection.hpp  flat_curve.cpp  flat_curve.hpp  linear_interpolator.cpp  linear_interpolator.hpp  yield_curve.hpp
src/curves/: curve_instruments.cpp  curve_instruments.hpp  curve_io.cpp  curve_io.hpp  market_data_io.cpp  market_data_io.hpp  piecewise_log_linear_curve.cpp  piecewise_log_linear_curve.hpp  sofr_bootstrapper.cpp  sofr_bootstrapper.hpp
src/rates/: coupon_period.cpp  coupon_period.hpp  fixed_leg.cpp  fixed_leg.hpp  floating_leg.cpp  floating_leg.hpp  rate_accrual.cpp  rate_accrual.hpp  vanilla_swap.cpp  vanilla_swap.hpp
src/risk/: dv01.cpp  dv01.hpp
tests/: test_curve_bootstrap.cpp  test_mini_pricer.cpp  test_smoke.cpp
tmp/pdfs/: backward_rates.txt
